.metadata/.plugins/org.eclipse.cdt.ui/Air32exam.build.log
20:00:17 **** Incremental Build of configuration Debug for project Air32exam ****
make all 
正在构建文件： ../src/main.cpp
正在调用： Cross ARM GNU C++ Compiler
arm-none-eabi-g++ -mcpu=cortex-m3 -mthumb -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DSTM32F10X_HD -DUSE_STDPERIPH_DRIVER -DHSE_VALUE=8000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f1-stdperiph" -std=gnu++11 -fabi-version=0 -fno-exceptions -fno-rtti -fno-use-cxa-atexit -fno-threadsafe-statics -MMD -MP -MF"src/main.d" -MT"src/main.o" -c -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function 'int main(int, char**)':
../src/main.cpp:21:32: error: 'trace_puts' was not declared in this scope
   trace_puts("Hello ARM World!");
                                ^
../src/main.cpp:25:56: error: 'trace_printf' was not declared in this scope
   trace_printf("System clock: %u Hz\n", SystemCoreClock);
                                                        ^
src/subdir.mk:31: recipe for target 'src/main.o' failed
make: *** [src/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

20:00:17 Build Failed. 4 errors, 0 warnings. (took 430ms)

